Fix team pictures on mobile

--- a/css/team.css
+++ b/css/team.css
@@ -97,3 +97,10 @@
     margin-bottom:10px;
     margin-top:-5px;
 }
+
+@media (max-width:992px){
+    .profile-thumbnail{
+        height: 10rem;
+        width: 10rem;
+    }
+}
